--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-img",
+  "name": "next-img-geq13",
   "version": "0.0.1",
   "description": "Import images in Next.js, support Next.js version 13.x 14.x",
   "main": "dist/index.cjs.js",
